[package]
name = "simple_request"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", default-features = false }
clap = { version = "4.5.40", default-features = false, features = [
    "derive",
    "help",
    "std",
    "usage",
] }
reqwest = { version = "0.12.22", default-features = false }
rustls = { version = "0.23.16", default-features = false, features = [
    "aws_lc_rs",
] }
uuid = { version = "1.17.0", default-features = false, features = ["v4"] }
rustls-pemfile = { version = "2.2.0", default-features = false, features = [
    "std",
] }
wcce-rs = { path = "../../wcce-rs" }
wstep-rs = { path = "../../wstep-rs" }
